fixed tasks and shifts

--- a/app/pages/shifts/shifts.scss
+++ b/app/pages/shifts/shifts.scss
@@ -1,3 +1,9 @@
 .shifts {
 
 }
+
+.top-right {
+	position: absolute;
+	top: 15px;
+	right: 12px;
+}
